# pypoly

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt  setup.py
c_example/: main.c  makefile  stacked_lstm.c
c_examples/: main.c  stacked_lstm.c  stacked_lstm.h  stacked_lstm_pet_parsed.yaml
cmake/: generic.cmake  python.cmake  third_party.cmake
examples/: test1.py
pypet/: __init__.py  tensor_array.py
pypet/cells/: __init__.py  vanilla.py
pypet/core/: CMakeLists.txt  error.cpp  error.h  expr.cpp  expr.h  ir_emitter.cpp  ir_emitter.h  parser.cpp  parser.h  pypet.h  sugared_value.cpp  sugared_value.h  tree.cpp  tree.h
pypet/core/tests/: CMakeLists.txt  test1.cpp
pypet/examples/: dilated_rnn_ast.txt  dilated_rnn_example.py  grid_rnn_ast.txt  grid_rnn_example.py  stacked_ast.txt  stacked_lstm_example.py  stacked_rnn_example.py  test1.py  ts_ast.txt
pypet/python/: __init__.py  tensor_array.py
pypet/python/examples/: context.py  dilated_rnn_example.py  grid_rnn_example.py  stacked_rnn_example.py
pypet/python/tests/: test_TensorArray.py
pypet/tests/: CMakeLists.txt  test1.cpp
pypoly/: __init__.py
pypoly/core/: CMakeLists.txt
pypoly/core/pypet/: '  CMakeLists.txt  aff.cpp  aff.h  array.cpp  array.h  array.proto  context.cpp  context.h  error.cpp  error.h  expr.cpp  expr.h  expr_arg.cpp  expr_arg.h  ir_emitter.cpp  ir_emitter.h  isl_printer.h  nest.cpp  nest.h  parser.cpp  parser.h  pypet.cpp  pypet.h  sugared_value.cpp  sugared_value.h  tree.cpp  tree.h  tree2scop.cpp  tree2scop.h  type.h  util.h
pypoly/python/: __init__.py  array.py  compute_dep.py  detect_output.md  map_transformer.py  overall_design.md  tensor_array.py
pypoly/python/cells/: vanilla.py
pypoly/python/examples/: dilated_rnn_example.py  dilated_rnn_example_ast.txt  dilated_rnn_example_parsed.yaml  dilated_rnn_example_tree.txt  grid_rnn_example.py  grid_rnn_example_ast.txt  grid_rnn_example_parsed.yaml  grid_rnn_example_tree.txt  stacked_rnn_example.py  stacked_rnn_example_parsed.yaml  stacked_rnn_example_tree.txt  transformer_example.py  utils.py
pypoly/python/experiments/: README.md  demo1.ipynb  exp_utils.py  hierarchical_seq.py  hierarchical_seq_exp.py  ops.py  xtype.py
pypoly/python/ir/: core_optimization.md  design.md  general_preprocess.md  optimization_preprocess.md  shape_propagation.py
pypoly/python/ir/example/: grid_rnn  lstm_cell  stacked_lstm  stacked_lstm_transformed
pypoly/python/ops/: compound.py  functional.py  meta.py
pypoly/python/optimizer/: ir.py  parallel_detection.py  parallel_exploitation.py  parallel_optimizer.py
pypoly/tests/: CMakeLists.txt  test_expr_printer.cpp  test_main.cpp  test_pypet1.cpp  test_pypet2.cpp  test_tree2scop.cpp
pypoly/tests/c_examples/: main.c
pypoly/tests/pet/: CMakeLists.txt  test_pet.cpp
pypoly/tests/pet/c_examples/: makefile  stacked_lstm.h  stacked_lstm2.c  stacked_lstm2_pet_parsed.yaml  stacked_lstm_clang_ast.txt  stacked_lstm_pet_parsed.yaml
tools/: clang_format.hook
